# webstreamer

./: CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  conanfile.txt  webstreamer_config.json
client/: package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
client/src/: RTC.d.ts  advanced-settings-overlay.ts  ajax.ts  clipboard.ts  decoder.ts  events.ts  getQueryVariable.ts  h264-decoder.ts  index.html  index.ts  input-bar.ts  input-capturer.ts  input.ts  ivideo-mode.ts  json.ts  key-mapper.ts  raw-decoder.ts  settings-menu.ts  stat-graph.ts  stream.ts  style.less  webrtc-stream.ts  websocket-stream.ts  webstreamer.ts
client/src/theme/: jquery-ui.css
cmake/: ConanHelpers.cmake  FindFFmpeg.cmake  FindWebRTC.cmake  Findx264.cmake  WarningLevels.cmake  conan.cmake  suppress_warnings.hpp.in  webstreamer-config.cmake.in
loop-stream/: CMakeLists.txt
loop-stream/src/: main.cpp
noise-stream/: CMakeLists.txt
noise-stream/src/: main.cpp
qt_inputprocessor/: CMakeLists.txt
qt_inputprocessor/cmake/: qt_inputprocessor-config.cmake.in
qt_inputprocessor/include/qt_inputprocessor/: export.hpp  qt_inputprocessor.hpp
qt_inputprocessor/src/: qt_inputprocessor.cpp
qt_inputprocessor/tests/: CMakeLists.txt
qt_inputprocessor/tests/src/: tests.cpp
test-stream/: CMakeLists.txt
test-stream/src/: main.cpp
webstreamer/: CMakeLists.txt
webstreamer/cmake/: webstreamer-config.cmake.in
webstreamer/include/webstreamer/: access_manager.hpp  client.hpp  client_set.hpp  codec_event.hpp  console_logger.hpp  custom_http_action_handler.hpp  custom_packet_handler.hpp  down_cast.hpp  encoder.hpp  encoder_factory.hpp  encoding_pipeline.hpp  event.hpp  file_logger.hpp  flags.hpp  frame_buffer.hpp  h264_encoder.hpp  h264_encoder_factory.hpp  input_processor.hpp  keyboard_event.hpp  log.hpp  mouse_event.hpp  raw_encoder.hpp  raw_encoder_factory.hpp  resolution.hpp  std_function_delegate.hpp  stop_watch.hpp  web_server.hpp  web_server_request_handler.hpp  webrtc_stream_client.hpp  webrtc_stream_server.hpp  websocket_server.hpp  websocket_server_request_handler.hpp  websocket_stream_client.hpp  websocket_stream_server.hpp  webstreamer.hpp
webstreamer/src/: access_manager.cpp  client.cpp  client_set.cpp  codec_event.cpp  console_logger.cpp  custom_http_action_handler.cpp  custom_packet_handler.cpp  encoder.cpp  encoding_pipeline.cpp  event.cpp  file_logger.cpp  frame_buffer.cpp  h264_encoder.cpp  h264_encoder_factory.cpp  input_processor.cpp  keyboard_event.cpp  log.cpp  log.hpp  mouse_event.cpp  raw_encoder.cpp  raw_encoder_factory.cpp  web_server.cpp  web_server_request_handler.cpp  webrtc_stream_client.cpp  webrtc_stream_server.cpp  websocket_server.cpp  websocket_server_request_handler.cpp  websocket_stream_client.cpp  websocket_stream_server.cpp  webstreamer.cpp
webstreamer/tests/: CMakeLists.txt
webstreamer/tests/src/: test_vn.cpp
